force-app/main/default/objects/SiebelOrder__x/SiebelOrder__x.object-meta.xml
<CustomObject>
    <description>SiebelOrder</description>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SiebelOrder</externalName>
    <label>Ordine Siebel</label>
    <pluralLabel>Ordini Siebel</pluralLabel>
</CustomObject>