force-app/main/default/objects/SiebelOrder__x/fields/ADDR_SPED__c.field-meta.xml
<CustomField>
    <fullName>ADDR_SPED__c</fullName>
    <description>ADDR_SPED</description>
    <externalDeveloperName>ADDR_SPED</externalDeveloperName>
    <label>Indirizzo Spedizione</label>
    <length>200</length>
    <type>Text</type>
</CustomField>