force-app/main/default/objects/SiebelOrder__x/fields/ATTRIB_35__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_35__c</fullName>
    <description>ATTRIB_35</description>
    <externalDeveloperName>ATTRIB_35</externalDeveloperName>
    <label>Legale Rappresentante</label>
    <length>50</length>
    <type>Text</type>
</CustomField>