force-app/main/default/objects/SiebelOrder__x/fields/ATTRIB_36__c.field-meta.xml
<CustomField>
    <fullName>ATTRIB_36__c</fullName>
    <description>ATTRIB_36</description>
    <externalDeveloperName>ATTRIB_36</externalDeveloperName>
    <label>Nome referente</label>
    <length>50</length>
    <type>Text</type>
</CustomField>