force-app/main/default/objects/SiebelOrder__x/fields/CITY_SPED__c.field-meta.xml
<CustomField>
    <fullName>CITY_SPED__c</fullName>
    <description>CITY_SPED</description>
    <externalDeveloperName>CITY_SPED</externalDeveloperName>
    <label>Citta [Spedizione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>