force-app/main/default/objects/SiebelOrder__x/fields/DISTRICT_SPED__c.field-meta.xml
<CustomField>
    <fullName>DISTRICT_SPED__c</fullName>
    <description>DISTRICT_SPED</description>
    <externalDeveloperName>DISTRICT_SPED</externalDeveloperName>
    <label>Regione [Spedizione]</label>
    <length>50</length>
    <type>Text</type>
</CustomField>