force-app/main/default/objects/SiebelOrder__x/fields/ID_COMMERCIALE__c.field-meta.xml
<CustomField>
    <fullName>ID_COMMERCIALE__c</fullName>
    <description>ID_COMMERCIALE</description>
    <externalDeveloperName>ID_COMMERCIALE</externalDeveloperName>
    <label>ID commerciale</label>
    <length>50</length>
    <type>Text</type>
</CustomField>