force-app/main/default/objects/SiebelOrder__x/fields/ID_POSIZIONE_SUPERIORE__c.field-meta.xml
<CustomField>
    <fullName>ID_POSIZIONE_SUPERIORE__c</fullName>
    <description>ID_POSIZIONE_SUPERIORE</description>
    <externalDeveloperName>ID_POSIZIONE_SUPERIORE</externalDeveloperName>
    <label>ID_POSIZIONE_SUPERIORE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>