force-app/main/default/objects/SiebelOrder__x/fields/LAST_UPD_BY__c.field-meta.xml
<CustomField>
    <fullName>LAST_UPD_BY__c</fullName>
    <description>LAST_UPD_BY</description>
    <externalDeveloperName>LAST_UPD_BY</externalDeveloperName>
    <label>Ultima Modifica Da</label>
    <length>255</length>
    <type>Text</type>
</CustomField>