force-app/main/default/objects/SiebelOrder__x/fields/NOME_POSIZIONE_SUPERIORE__c.field-meta.xml
<CustomField>
    <fullName>NOME_POSIZIONE_SUPERIORE__c</fullName>
    <description>NOME_POSIZIONE_SUPERIORE</description>
    <externalDeveloperName>NOME_POSIZIONE_SUPERIORE</externalDeveloperName>
    <label>Nome posizione superiore</label>
    <length>50</length>
    <type>Text</type>
</CustomField>