force-app/main/default/objects/SiebelOrder__x/fields/NUM_RDO_ACQ_TEL__c.field-meta.xml
<CustomField>
    <fullName>NUM_RDO_ACQ_TEL__c</fullName>
    <description>NUM_RDO_ACQ_TEL</description>
    <externalDeveloperName>NUM_RDO_ACQ_TEL</externalDeveloperName>
    <label>NUM_RDO_ACQ_TEL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>