force-app/main/default/objects/SiebelOrder__x/fields/NUM_RDO_GAS__c.field-meta.xml
<CustomField>
    <fullName>NUM_RDO_GAS__c</fullName>
    <description>NUM_RDO_GAS</description>
    <externalDeveloperName>NUM_RDO_GAS</externalDeveloperName>
    <label>NUM_RDO_GAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>