force-app/main/default/objects/SiebelOrder__x/fields/OU_TYPE_CD__c.field-meta.xml
<CustomField>
    <fullName>OU_TYPE_CD__c</fullName>
    <description>OU_TYPE_CD</description>
    <externalDeveloperName>OU_TYPE_CD</externalDeveloperName>
    <label>Categoria</label>
    <length>50</length>
    <type>Text</type>
</CustomField>