force-app/main/default/objects/SiebelOrder__x/fields/SR_NUM__c.field-meta.xml
<CustomField>
    <fullName>SR_NUM__c</fullName>
    <description>SR_NUM</description>
    <externalDeveloperName>SR_NUM</externalDeveloperName>
    <label>N. RS</label>
    <length>64</length>
    <type>Text</type>
</CustomField>