force-app/main/default/objects/SiebelOrder__x/fields/TIPO_COMMERCIALE__c.field-meta.xml
<CustomField>
    <fullName>TIPO_COMMERCIALE__c</fullName>
    <description>TIPO_COMMERCIALE</description>
    <externalDeveloperName>TIPO_COMMERCIALE</externalDeveloperName>
    <label>Tipo commerciale</label>
    <length>30</length>
    <type>Text</type>
</CustomField>