force-app/main/default/objects/SiebelOrder__x/fields/TIPO_POS_SUP__c.field-meta.xml
<CustomField>
    <fullName>TIPO_POS_SUP__c</fullName>
    <description>TIPO_POS_SUP</description>
    <externalDeveloperName>TIPO_POS_SUP</externalDeveloperName>
    <label>Tipo posizione superiore</label>
    <length>30</length>
    <type>Text</type>
</CustomField>