force-app/main/default/objects/SiebelOrder__x/fields/X_BOLLO__c.field-meta.xml
<CustomField>
    <fullName>X_BOLLO__c</fullName>
    <description>X_BOLLO</description>
    <externalDeveloperName>X_BOLLO</externalDeveloperName>
    <label>Bollo</label>
    <length>30</length>
    <type>Text</type>
</CustomField>