force-app/main/default/objects/SiebelOrder__x/fields/X_COGNOME_BP_ALTERN__c.field-meta.xml
<CustomField>
    <fullName>X_COGNOME_BP_ALTERN__c</fullName>
    <description>X_COGNOME_BP_ALTERN</description>
    <externalDeveloperName>X_COGNOME_BP_ALTERN</externalDeveloperName>
    <label>Cognome Destinatario Divergente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>