force-app/main/default/objects/SiebelOrder__x/fields/X_IND_BP_ALTERN_ID__c.field-meta.xml
<CustomField>
    <fullName>X_IND_BP_ALTERN_ID__c</fullName>
    <description>X_IND_BP_ALTERN_ID</description>
    <externalDeveloperName>X_IND_BP_ALTERN_ID</externalDeveloperName>
    <label>IND BP ALTERN ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>