force-app/main/default/objects/SiebelOrder__x/fields/X_ISTAT_LOC_SPED__c.field-meta.xml
<CustomField>
    <fullName>X_ISTAT_LOC_SPED__c</fullName>
    <description>X_ISTAT_LOC_SPED</description>
    <externalDeveloperName>X_ISTAT_LOC_SPED</externalDeveloperName>
    <label>Codice Città [Spedizione]</label>
    <length>30</length>
    <type>Text</type>
</CustomField>