force-app/main/default/objects/SiebelOrder__x/fields/X_NOMINATIVO_REC__c.field-meta.xml
<CustomField>
    <fullName>X_NOMINATIVO_REC__c</fullName>
    <description>X_NOMINATIVO_REC</description>
    <externalDeveloperName>X_NOMINATIVO_REC</externalDeveloperName>
    <label>Nominativo di recapito</label>
    <length>35</length>
    <type>Text</type>
</CustomField>